# systray2-rs

./: Cargo.toml
src/: lib.rs
src/api/: mod.rs
src/api/win32/: mod.rs
