[package]
name = "systray2"
version = "0.4.1"
authors = ["AkarinLiu <akarinliu@outlook.com>"]
description = "An Systray Library fork"
license = "BSD-3-Clause"
homepage = "http://github.com/AkarinLiu/systray2-rs"
repository = "https://github.com/AkarinLiu/systray2-rs.git"
readme = "README.md"
keywords = ["gui"]
edition = "2021"

[dependencies]
log= "*"

[target.'cfg(target_os = "windows")'.dependencies]
winapi= { version = "*", features = ["shellapi", "libloaderapi", "errhandlingapi", "impl-default"] }
libc= "*"

[target.'cfg(target_os = "linux")'.dependencies]
gtk= "*"
glib= "*"
libappindicator= "*"

[target.'cfg(target_os = "macos")'.dependencies]
objc="*"
cocoa="*"
core-foundation="*"
